// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconBadge /> by default matches with snapshot 1`] = `
<span
  className="sc-bdVaJa kWlMMP k-IconBadge k-IconBadge--big k-IconBadge--valid k-IconBadge--hasBorderStyles"
  style={
    Object {
      "--border-color": null,
      "--border-radius": "1.875rem",
      "--border-style": null,
      "--border-width": "0rem",
    }
  }
>
  <span
    className="k-IconBadge__content"
  >
    Custom children
  </span>
</span>
`;

exports[`<IconBadge /> with border style matches with snapshot 1`] = `
<span
  className="sc-bdVaJa kWlMMP k-IconBadge k-IconBadge--big k-IconBadge--hasBorderStyles"
  style={
    Object {
      "--border-color": "#222",
      "--border-radius": "1.875rem",
      "--border-style": "solid",
      "--border-width": "0.125rem",
    }
  }
>
  <span
    className="k-IconBadge__content"
  >
    Custom children
  </span>
</span>
`;
